--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
-	<!-- <div class="superinfo-bg">
-		<div class="superinfo">
-			<p><img src="img/controle-svg.svg" alt=""></p>
-			<p><img src="img/gamer-joystick.svg" width="52px" alt="joystick"></p>
-			<p><img src="img/gaming-mobile.svg" width="52px" alt="joystick 2"></p>
-			<p><img src="img/joystick-svgrepo.svg" width="55px" alt="joystick 3"></p>
-			<p><img src="img/game-svgrepo-.svg" width="52px" alt="joystick 4"></p>
-		</div>
-	</div> -->
 	
 	<header class="menu-bg">
 		<div class="menu">
@@ -28,7 +18,7 @@
 			<nav class="menu-nav">
 				<ul>
 					<li><a href="#sobre">Sobre Mim</a></li>
-					<li><a href="#populares">Carreira</a></li>
+					<li><a href="#projetos">Projetos</a></li>
 					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav>
@@ -50,55 +40,41 @@
 	</section>
 	
 	
-	<section class="curiosidades" id="curiosidades">
-		<div class="curiosidades-item">
+	<section class="projetos" id="projetos">
+		<div class="projetos-item">
 			<h2>Blog-React</h2>
 			<p>Um blog desenvolvido com React/JS com intuito de estudo, utilizando react-router-dom.</p>
 		</div>
 		
-		<div class="curiosidades-item">
+		<div class="projetos-item">
 			<h2>Plantel-React</h2>
 			<p>Uma página web desenvolvido em React/JS para estudo onde trabalho com a criação de componentes, cards, inputs, etc. </p>
 		</div>
 		
-		<div class="curiosidades-item">
+		<div class="projetos-item">
 			<h2>ERP</h2>
 			<p>Sistema ERP em que trabalho atualmente, desenvolvido com o framework Laravel, onde implemento novas funcionalidades e dou manutenção no código fonte.</p>
 		</div>
 		
-		<div class="curiosidades-item">
+		<div class="projetos-item">
 			<h2>Cronômetro-React</h2>
 			<p>App mobile desenvolvido para estudo também, onde pratico React Native e utilizo componentes próprios do React Native.</p>
 		</div>
 		
-		<div class="curiosidades-item">
+		<div class="projetos-item">
 			<h2>ScreenSound</h2>
 			<p>Aplicação desenvolvida em C# para fim de estudo, onde inicio minha jornada na linguagem C Sharp.</p>
 		</div>
 		
-		<div class="curiosidades-item">
+		<div class="projetos-item">
 			<h2>SearchEstablishments</h2>
 			<p>Projeto que estou desenvolvendo como trabalho da faculdade, onde trabalho com FastApi e React, onde consumo uma API que me retorna os estabelecimentos de saúde próximos a mim.</p>
 		</div>
 		
 	</section>
 	
-	<section class="populares" id="populares">
-		
-		<div class="populares-item" >
-			<h2>Contato</h2>
-			<ul>
-				<li>Instagram</li>
-                <li>GitHub</li>
-                <li>victor7_oliveira@hotmail.com</li>
-    
-			</ul>
-			<a href="#">Saiba Mais</a>
-		</div>
-		
-	</section>
 	
-	<footer class="footer" style="align-items: center; justify-content: center;  font-size: 1rem;">
+	<footer class="footer" id="contato" style="align-items: center; justify-content: center;  font-size: 1rem;">
 
 		<div style="justify-content: center;">
 			
