--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 			<div style="justify-content: center">
 				<h2 style="margin-left: 40px;">Contato</h2>
 
-				<a href="">
+				<a target="_blank" href="https://github.com/jvoliveiras">
 					<i class="bi bi-github"> GitHub</i>
 				</a>
 	
-				<a href="">
+				<a target="_blank" href="https://www.instagram.com/_jvoliveira">
 					<i class="bi bi-instagram">Instagram</i>
 				</a>
 			</div>
